# tidos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  lefthook.yml
examples/: Cargo.toml  README.md
examples/angular/: Cargo.toml  README.md
examples/angular/src/components/: hello_world.css
examples/documentation_site/: Cargo.toml  Rocket.toml  package.json  vite.config.js
examples/documentation_site/public/: transitions.css  transitions.js
examples/documentation_site/src/: cache_control.rs  main.rs  server_timing.rs
examples/documentation_site/src/components/: FrameworkTabs.svelte  mod.rs
examples/documentation_site/src/components/code_block/: code_block.css  mod.rs
examples/documentation_site/src/components/code_section/: code_section.css  mod.rs
examples/documentation_site/src/components/docs_layout/: docs_layout.css  mod.rs
examples/documentation_site/src/components/feature_card/: feature_card.css  mod.rs
examples/documentation_site/src/components/features_section/: features_section.css  mod.rs
examples/documentation_site/src/components/framework_tabs/: mod.rs
examples/documentation_site/src/components/hero/: hero.css  mod.rs
examples/documentation_site/src/components/install_section/: InstallPill.svelte  install_section.css  mod.rs
examples/documentation_site/src/components/mobile_menu/: MobileMenu.svelte  mod.rs
examples/documentation_site/src/components/nav_bar/: mod.rs  nav_bar.css  nav_bar_docs.css
examples/documentation_site/src/components/news_layout/: mod.rs  news_layout.css
examples/documentation_site/src/components/site_footer/: mod.rs  site_footer.css
examples/documentation_site/src/pages/: index.jsonld  index.rs  mod.rs
examples/documentation_site/src/pages/docs/: component.jsonld  (+10 more)
examples/http_frameworks/actix/: Cargo.toml
examples/http_frameworks/actix/src/: main.css  main.rs
examples/http_frameworks/axum/: Cargo.toml
examples/http_frameworks/axum/src/: main.rs
examples/http_frameworks/common/: Cargo.toml
examples/http_frameworks/rocket/: Cargo.toml
examples/http_frameworks/rocket/src/: main.rs
examples/http_frameworks/warp/: Cargo.toml
examples/http_frameworks/warp/src/: main.rs
examples/internationalization/: Cargo.toml  README.md  Tidos.toml
examples/internationalization/resources/nl-NL/: common.ftl
examples/internationalization/src/: main.rs
examples/internationalization/src/components/: greeting.rs
examples/internationalization/translations/en-US/: common.ftl
examples/lit/: Cargo.toml  README.md  package.json
examples/react/: Cargo.toml  README.md  package.json
examples/react/src/components/: HelloWorld.css
examples/rocket/: Cargo.toml
examples/simple_rocket/: Cargo.toml
examples/simple_rocket/src/: main.rs
examples/simple_rocket/src/components/: mod.rs
examples/svelte/: Cargo.toml  README.md
examples/vue/: Cargo.toml  package.json
examples/web_frameworks/angular/: Cargo.toml  README.md  package.json  tsconfig.app.json  vite.config.js
examples/web_frameworks/angular/static/: main.css
examples/web_frameworks/lit/: Cargo.toml  README.md  package.json  vite.config.js
examples/web_frameworks/react/: Cargo.toml  README.md  package.json  vite.config.js
examples/web_frameworks/svelte/: Cargo.toml  README.md  package.json
examples/web_frameworks/svelte/src/: main.rs
examples/web_frameworks/vue/: Cargo.toml  README.md  package.json  vite.config.js
examples/web_frameworks/vue/src/: main.rs
tidos/: Cargo.toml  Tidos.toml
tidos/benches/: page_rendering.rs
tidos/src/: components.rs  i18n_config.rs  internals.rs  lib.md  lib.rs  page.rs
tidos/src/page/: actix_web_impl.rs  axum_impl.rs  mod.rs  rocket_impl.rs  warp_impl.rs
tidos/tests/: attributes.rs  conditional_statements.rs  for_loops.rs  i18n.rs  match_statements.rs  native_element.rs  page_macro.rs  sanitization.rs  scoped_css.rs  slots.rs  view_macro.rs
tidos/tests/attributes/panics/: attribute_value_without_delimiters.rs  attribute_value_without_delimiters.stderr  default_flag_on_native_element.rs  default_flag_on_native_element.stderr  invalid_toggle_value.rs  invalid_toggle_value.stderr  missing_variable_defined_toggle.rs  missing_variable_defined_toggle.stderr
tidos/tests/control_tags/panics/: double_else.rs  double_else.stderr  else_before_else_if.rs  else_before_else_if.stderr  for_loop_missing_binding.rs  for_loop_missing_binding.stderr  missing_end_control_tag.rs  missing_end_control_tag.stderr  missing_end_for_loop.rs  missing_end_for_loop.stderr  missing_pattern_in_match_statement.rs  missing_pattern_in_match_statement.stderr  misspelled_control_tag.rs  misspelled_control_tag.stderr
tidos/tests/i18n/: actix_web.rs  axum.rs  mod.rs  rocket.rs  warp.rs
tidos/tests/native_element/panics/: single_word_struct_has_no_hyphen.rs  single_word_struct_has_no_hyphen.stderr
tidos/tests/scoped_css/: test.css
tidos/tests/scoped_css/panics/: file_not_found.rs  file_not_found.stderr
tidos/tests/view_macro/panics/: empty_closing_tag.rs  empty_closing_tag.stderr  forgot_to_close_html_tag.rs  forgot_to_close_html_tag.stderr  missing_closing_angle_bracket.rs  missing_closing_angle_bracket.stderr  misspelled_html_in_raw_statement.rs  misspelled_html_in_raw_statement.stderr  nested_wrong_closing_tag.rs  nested_wrong_closing_tag.stderr  tag_name_ends_with_hyphen.rs  tag_name_ends_with_hyphen.stderr  wrong_closing_tag.rs  wrong_closing_tag.stderr
tidos/translations/en-US/: common.ftl
tidos/translations/nl-NL/: common.ftl
tidos_i18n/: Cargo.toml  README.md
tidos_i18n/src/: i18n.rs  lib.rs
tidos_macro/: Cargo.toml  README.md
tidos_macro/src/: i18n.rs  impl.rs  lib.rs  main.rs  page_wrapper.rs  view.md
tidos_macro/src/code_generation/: attribute.rs  component.rs  content.rs  control_tag.rs  html_tag.rs  mod.rs
tidos_macro/src/parsing/: commands.rs  component.rs  content.rs  control_tag.rs  html_tag.rs  mod.rs  structures.rs  utils.rs
tidos_macro/src/tokens/: attribute.rs  component.rs  content.rs  control_tag.rs  html_tag.rs  mod.rs
tidos_macro/tests/: template_tests.rs
(+38 files in other folders)
