[workspace]
resolver = "2"
members = [
    "tidos",
    "tidos_macro",
    "tidos_i18n",
    "examples/internationalization",
    "examples/rocket",
]

[workspace.package]
version = "0.7.2"
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies]
tidos = { path = "./tidos", version = "0.7.1" }
tidos_macro = { path = "./tidos_macro", version = "0.7.1" }
tidos_i18n = { path = "./tidos_i18n", version = "0.7.2"}


[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'