[workspace]
resolver = "2"
members = [
    "tidos",
    "tidos_macro",
    "tidos_i18n",
]
exclude = [
    "examples/http_frameworks/actix",
    "examples/http_frameworks/axum",
    "examples/http_frameworks/warp",
    "examples/http_frameworks/rocket",
    "examples/internationalization",
    "examples/web_frameworks/svelte",
    "examples/web_frameworks/lit",
    "examples/web_frameworks/vue",
    "examples/web_frameworks/react",
    "examples/web_frameworks/angular"
]

[workspace.package]
version = "0.7.6"
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies]
tidos = { path = "./tidos", version = "0.7.6" }
tidos_macro = { path = "./tidos_macro", version = "0.7.6" }
tidos_i18n = { path = "./tidos_i18n", version = "0.7.5"}


[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'