[package]
name = "tidos"
version = { workspace = true }
authors = ["kaasbroodju"]
license = "LGPL-3"
repository = "https://github.com/kaasbroodju/tidos"
description = "Tidos is a component framework that can be served by any web framework."
readme = "../README.md"
rust-version.workspace = true
edition.workspace = true
keywords = ["tidos", "web", "framework", "component"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
rocket = { version = "0.5.1", optional = true }
tidos_i18n = { workspace = true, optional = true }
unic-langid = { version = "0.9.6", optional = true}
figment = { version = "0.10.19", features = ["env", "toml"], optional = true }
serde = { version = "1.0.228", optional = true}
tidos_macro = { workspace = true }

[dev-dependencies]
trybuild = "1.0.104"

[features]
rocket = ["dep:rocket"]
i18n = ["dep:tidos_i18n", "dep:unic-langid", "tidos_macro/i18n", "dep:figment", "dep:serde"]
