[package]
name = "tidos"
version = { workspace = true }
authors = ["kaasbroodju"]
license = "LGPL-3.0"
repository = "https://github.com/kaasbroodju/tidos"
description = "Tidos is a component framework that can be served by any web framework."
readme = "../README.md"
rust-version.workspace = true
edition.workspace = true
keywords = ["tidos", "web", "framework", "component"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
actix-web = { version = "4", optional = true }
axum = { version = "0.8.8", optional = true }
rocket = { version = "0.5.1", optional = true }
warp = { version = "0.4.2", default-features = false, optional = true }
tidos_macro = { workspace = true }

# I18n support
tidos_i18n = { workspace = true, optional = true }
fluent = { version = "0.17.0", optional = true }
fluent-langneg = { version = "0.13.1", optional = true }
fluent-resmgr = {  version = "0.0.8", optional = true }
unic-langid = { version = "0.9.6", optional = true}
lazy_static = { version = "1.5.0", optional = true }
figment = { version = "0.10.19", features = ["env", "toml"], optional = true }
serde = { version = "1.0.228", optional = true}

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
http-body-util = "0.1.3"
hyper = "1.9.0"
stats_alloc = "0.1"
tokio = { version = "1.51.0", features = ["rt", "macros"] }
trybuild = "1.0.116"

[[bench]]
name = "page_rendering"
harness = false

[[test]]
name = "i18n"
path = "tests/i18n/mod.rs"
required-features = ["i18n"]

[[test]]
name = "page_macro"
required-features = []

[features]
actix-web = ["dep:actix-web"]
axum = ["dep:axum"]
rocket = ["dep:rocket"]
warp = ["dep:warp"]
i18n = ["dep:tidos_i18n", "tidos_macro/i18n", "dep:fluent", "dep:fluent-langneg", "dep:fluent-resmgr", "dep:unic-langid", "dep:lazy_static", "dep:figment", "dep:serde"]
