[package]
name = "tidos_i18n"
version = { workspace = true }
authors = ["kaasbroodju"]
license = "LGPL-3.0"
repository = "https://github.com/kaasbroodju/tidos"
description = "Procedural macros for the Tidos component framework."
readme = "../README.md"
rust-version.workspace = true
edition.workspace = true
keywords = ["tidos", "i18n", "internationalization", "localization", "l10n" ]
categories = ["internationalization", "localization", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = { version = "2.0.116", features = ["full"] }
quote = "1.0.44"
cargo-expand = "1.0.74"

[lib]
proc-macro = true

