[package]
name = "tidos_macro"
version = { workspace = true }
authors = ["kaasbroodju"]
license = "LGPL-3.0"
repository = "https://github.com/kaasbroodju/tidos"
description = "Procedural macros for the Tidos component framework."
readme = "../README.md"
rust-version.workspace = true
edition.workspace = true
keywords = ["tidos", "web", "framework", "code", "generation"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = { version = "2.0.116", features = ["full"] }
quote = "1.0.44"
cargo-expand = "1.0.74"

[dependencies.uuid]
version = "1.21.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
proc-macro = true

[features]
i18n = []
