[package]
name = "internationalization"
version.workspace = true
edition.workspace = true

[dependencies]
tidos = { workspace = true, features = ["rocket"] }
tidos_i18n = { workspace = true }
rocket = "0.5"
fluent = "0.17.0"
unic-langid = { version = "0.9.6", features = ["macros"] }
fluent-langneg = "0.13.1"
fluent-resmgr = "0.0.8"
lazy_static = "1.5.0"